--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,10 +1,14 @@
 # Root logger option
 log4j.rootLogger=INFO, file, stdout
- #log = C:\\Users\\Dee\\
- log=/home/pongj443/servlets/logs/
+log = C:\\Users\\Dee\\
+ #log=/home/pongj443/servlets/logs/
 # Direct log messages to a log file
 log4j.appender.file=org.apache.log4j.RollingFileAppender
-log4j.appender.file.File=${log}log.txt
+log4j.appender.file=org.apache.log4j.rolling.RollingFileAppender
+log4j.appender.file.RollingPolicy=org.apache.log4j.rolling.TimeBasedRollingPolicy
+log4j.appender.file.rollingPolicy.FileNamePattern=${log}log-%d{yyyy-MM-dd}.log
+log4j.appender.file.Append=true
+#log4j.appender.file.File=${log}log.log
 log4j.appender.file.MaxFileSize=100MB
 log4j.appender.file.MaxBackupIndex=1
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
